# setu_chat_app

./: .eslintrc.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.agent/: rules.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx
src/app/(main)/: layout.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/auth/: TauriDeepLinkHandler.tsx
src/components/chat/: AnimatedEmoji.tsx  AttachmentMenu.tsx  AudioPlayer.tsx  ChatHeader.tsx  ConversationList.tsx  FileCard.tsx  FilePreviewBar.tsx  ForwardMessageModal.tsx  MessageBubble.tsx  MessageInput.tsx  MessageStatus.tsx  Sidebar.tsx  SuggestedUsers.tsx
src/components/group/: CreateGroupModal.tsx
src/components/landing/: APISection.tsx  DownloadSection.tsx  GroupsSection.tsx  HeroSection.tsx  Navbar.tsx  RealtimeSection.tsx  SecuritySection.tsx  StatsSection.tsx  TechShowcase.tsx  TestimonialsSection.tsx
src/components/search/: UserSearch.tsx
src/components/settings/: ActiveSessions.tsx
src/components/shared/: NewLoginBanner.tsx  OnlineIndicator.tsx  ThemeColorProvider.tsx  (+1 more)
src/hooks/: usePresence.ts  useRealtimeConversations.ts  useRealtimeMessages.ts  useRealtimeSessions.ts  useTypingIndicator.ts
src/lib/: device-info.ts  draft-messages.ts  email.ts  emoji.ts  file-validation.ts  group-helpers.ts  tauri.ts  theme-config.ts
src/stores/: useAuthStore.ts  useChatStore.ts  useToastStore.ts
src/types/: index.ts
supabase/migrations/: 002_pinned_conversations.sql
(+22 files in other folders)
